<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ru.prohor.universe</groupId>
    <artifactId>jawa</artifactId>
    <version>final</version>
    <packaging>pom</packaging>
    <name>jawa</name>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <kotlin.version>2.2.0</kotlin.version>
        <kotlin.compiler.jvmTarget>21</kotlin.compiler.jvmTarget>
        <kotlin.compiler.incremental>true</kotlin.compiler.incremental>

        <universe.mainClass>Unknown</universe.mainClass>
    </properties>

    <modules>
        <module>jocasta</module>
        <module>padawan</module>
        <module>scarif</module>
        <module>sabacc</module>
        <module>yoda</module>
        <module>boba-fett</module>
        <module>venator</module>
        <module>fulcrum</module>
        <module>chopper</module>
        <module>bb-8</module>
        <module>uni</module>
        <module>kenobi</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <!-- Source: https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-dependencies -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>3.5.16</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Source: https://mvnrepository.com/artifact/org.junit/junit-bom -->
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>5.14.4</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Source: https://mvnrepository.com/artifact/tools.jackson/jackson-bom -->
            <dependency>
                <groupId>tools.jackson</groupId>
                <artifactId>jackson-bom</artifactId>
                <version>3.2.2</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>1.18.0</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/jakarta.annotation/jakarta.annotation-api -->
            <dependency>
                <groupId>jakarta.annotation</groupId>
                <artifactId>jakarta.annotation-api</artifactId>
                <version>3.0.0</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
            <dependency>
                <groupId>com.auth0</groupId>
                <artifactId>java-jwt</artifactId>
                <version>4.5.0</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/dev.morphia.morphia/morphia-core -->
            <dependency>
                <groupId>dev.morphia.morphia</groupId>
                <artifactId>morphia-core</artifactId>
                <version>2.5.0</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.mongodb/mongodb-driver-sync -->
            <dependency>
                <groupId>org.mongodb</groupId>
                <artifactId>mongodb-driver-sync</artifactId>
                <version>5.5.1</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>1.18.38</version>
                <scope>provided</scope>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.mongodb/bson -->
            <dependency>
                <groupId>org.mongodb</groupId>
                <artifactId>bson</artifactId>
                <version>5.5.1</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/commons-validator/commons-validator -->
            <dependency>
                <groupId>commons-validator</groupId>
                <artifactId>commons-validator</artifactId>
                <version>1.10.0</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/com.github.ben-manes.caffeine/caffeine -->
            <dependency>
                <groupId>com.github.ben-manes.caffeine</groupId>
                <artifactId>caffeine</artifactId>
                <version>3.2.2</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>okhttp</artifactId>
                <version>4.12.0</version>
            </dependency>

            <!-- Source: https://mvnrepository.com/artifact/org.telegram/telegrambots-bom -->
            <dependency>
                <groupId>org.telegram</groupId>
                <artifactId>telegrambots-bom</artifactId>
                <version>10.2.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
            <dependency>
                <groupId>com.googlecode.json-simple</groupId>
                <artifactId>json-simple</artifactId>
                <version>1.1.1</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.json/json -->
            <dependency>
                <groupId>org.json</groupId>
                <artifactId>json</artifactId>
                <version>20250517</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/net.bramp.ffmpeg/ffmpeg -->
            <dependency>
                <groupId>net.bramp.ffmpeg</groupId>
                <artifactId>ffmpeg</artifactId>
                <version>0.8.0</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
            <dependency>
                <groupId>org.jsoup</groupId>
                <artifactId>jsoup</artifactId>
                <version>1.21.2</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.fusesource.jansi/jansi -->
            <dependency>
                <groupId>org.fusesource.jansi</groupId>
                <artifactId>jansi</artifactId>
                <version>2.4.2</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>2.0.17</version>
            </dependency>

            <!-- Source: https://mvnrepository.com/artifact/com.mpatric/mp3agic -->
            <dependency>
                <groupId>com.mpatric</groupId>
                <artifactId>mp3agic</artifactId>
                <version>0.9.1</version>
            </dependency>

            <!-- Source: https://mvnrepository.com/artifact/com.rometools/rome -->
            <dependency>
                <groupId>com.rometools</groupId>
                <artifactId>rome</artifactId>
                <version>2.1.0</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.skyscreamer/jsonassert -->
            <dependency>
                <groupId>org.skyscreamer</groupId>
                <artifactId>jsonassert</artifactId>
                <version>1.5.3</version>
                <scope>test</scope>
            </dependency>

            <!-- Kotlin -->


            <!-- https://mvnrepository.com/artifact/org.jetbrains.kotlin/kotlin-stdlib -->
            <dependency>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-stdlib</artifactId>
                <version>${kotlin.version}</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.jetbrains.kotlinx/kotlinx-coroutines-core -->
            <dependency>
                <groupId>org.jetbrains.kotlinx</groupId>
                <artifactId>kotlinx-coroutines-core</artifactId>
                <version>1.10.2</version>
                <type>pom</type>
                <scope>runtime</scope>
            </dependency>

            <!-- Source: https://mvnrepository.com/artifact/com.github.ajalt.clikt/clikt-jvm -->
            <dependency>
                <groupId>com.github.ajalt.clikt</groupId>
                <artifactId>clikt-jvm</artifactId>
                <version>5.1.0</version>
            </dependency>


            <!-- Universe -->


            <dependency>
                <groupId>ru.prohor.universe</groupId>
                <artifactId>jocasta-core</artifactId>
                <version>final</version>
            </dependency>
            <dependency>
                <groupId>ru.prohor.universe</groupId>
                <artifactId>jocasta-spring</artifactId>
                <version>final</version>
            </dependency>
            <dependency>
                <groupId>ru.prohor.universe</groupId>
                <artifactId>jocasta-morphia</artifactId>
                <version>final</version>
            </dependency>
            <dependency>
                <groupId>ru.prohor.universe</groupId>
                <artifactId>jocasta-spring-web</artifactId>
                <version>final</version>
            </dependency>
            <dependency>
                <groupId>ru.prohor.universe</groupId>
                <artifactId>scarif-jwt</artifactId>
                <version>final</version>
            </dependency>
            <dependency>
                <groupId>ru.prohor.universe</groupId>
                <artifactId>scarif-jwt-provider</artifactId>
                <version>final</version>
            </dependency>
            <dependency>
                <groupId>ru.prohor.universe</groupId>
                <artifactId>jocasta-jackson-morphia</artifactId>
                <version>final</version>
            </dependency>
            <dependency>
                <groupId>ru.prohor.universe</groupId>
                <artifactId>jocasta-jackson-core</artifactId>
                <version>final</version>
            </dependency>
            <dependency>
                <groupId>ru.prohor.universe</groupId>
                <artifactId>jocasta-tg-bots</artifactId>
                <version>final</version>
            </dependency>
            <dependency>
                <groupId>ru.prohor.universe</groupId>
                <artifactId>yahtzee-core</artifactId>
                <version>final</version>
            </dependency>
            <dependency>
                <groupId>ru.prohor.universe</groupId>
                <artifactId>yahtzee-stats</artifactId>
                <version>final</version>
            </dependency>
            <dependency>
                <groupId>ru.prohor.universe</groupId>
                <artifactId>jocasta-morphia-configuration</artifactId>
                <version>final</version>
            </dependency>
            <dependency>
                <groupId>ru.prohor.universe</groupId>
                <artifactId>yoda-bot</artifactId>
                <version>final</version>
            </dependency>
            <dependency>
                <groupId>ru.prohor.universe</groupId>
                <artifactId>chopper-client</artifactId>
                <version>final</version>
            </dependency>
            <dependency>
                <groupId>ru.prohor.universe</groupId>
                <artifactId>jocasta-jackson-kotlin</artifactId>
                <version>final</version>
            </dependency>
            <dependency>
                <groupId>ru.prohor.universe</groupId>
                <artifactId>kenobi-core</artifactId>
                <version>final</version>
            </dependency>
            <dependency>
                <groupId>ru.prohor.universe</groupId>
                <artifactId>kenobi-youtube-plugin</artifactId>
                <version>final</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.6.2</version>
                <executions>
                    <execution>
                        <id>enforce-versions</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>[3.9.9,)</version>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>[25,)</version>
                                </requireJavaVersion>
                            </rules>
                            <failFast>true</failFast>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.4</version>
                <configuration>
                    <argLine>-ea -XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.38</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.jetbrains.kotlin</groupId>
                    <artifactId>kotlin-maven-plugin</artifactId>
                    <version>${kotlin.version}</version>
                    <executions>
                        <execution>
                            <id>compile</id>
                            <phase>compile</phase>
                            <goals>
                                <goal>compile</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>test-compile</id>
                            <phase>test-compile</phase>
                            <goals>
                                <goal>test-compile</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <args>
                            <arg>-Xjsr305=strict</arg>
                        </args>
                        <compilerPlugins>
                            <plugin>spring</plugin>
                        </compilerPlugins>
                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>org.jetbrains.kotlin</groupId>
                            <artifactId>kotlin-maven-allopen</artifactId>
                            <version>${kotlin.version}</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>3.5.4</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>repackage</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>3.7.1</version>
                    <executions>
                        <execution>
                            <phase>package</phase>
                            <goals>
                                <goal>single</goal>
                            </goals>
                            <configuration>
                                <archive>
                                    <manifest>
                                        <mainClass>${universe.mainClass}</mainClass>
                                    </manifest>
                                </archive>
                                <descriptorRefs>
                                    <descriptorRef>jar-with-dependencies</descriptorRef>
                                </descriptorRefs>
                                <finalName>${project.artifactId}</finalName>
                                <appendAssemblyId>false</appendAssemblyId>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
